--- a/game/templates/game_quiz.html
+++ b/game/templates/game_quiz.html
@@ -40,7 +40,7 @@
         {%  endfor %}
         <input type="hidden" name="quiz_id" value="{{ quiz.id }}">
         <div class="vertical-center">
-            <button type="submit">Wyślij</button>
+            <button type="submit" class="big-orange-button">Wyślij</button>
         </div>
     </form>
 
