--- a/game/templates/login.html
+++ b/game/templates/login.html
@@ -15,7 +15,7 @@
     {{ form.as_p }}
     <div class="vertical-center"><button type="submit">Zaloguj</button></div>
     <br>
-    Nie masz jeszcze konta? <a href="{% url "register" %}">Zarejestruj się.</a>
+    Nie masz jeszcze konta? <a href="{% url "register" %}" class="blue"><u>Zarejestruj się.</u></a>
 </form>
 
 {% endblock %}
