--- a/game/templates/register.html
+++ b/game/templates/register.html
@@ -15,7 +15,7 @@
     {{ form.as_p }}
     <div class="vertical-center"><button type="submit">Utwórz konto</button></div>
     <br>
-    Masz już konto? <a href="{% url "login" %}">Zaloguj się.</a>
+    Masz już konto? <a href="{% url "login" %}" class="blue"><u>Zaloguj się.</u></a>
 </form>
 
-{% endblock %}
+{% endblock %}.
