--- a/game/templates/rules.html
+++ b/game/templates/rules.html
@@ -6,35 +6,56 @@
 {% endblock %}
 
 {%  block content %}
-    <h1>Zasady gry</h1>
-        <h2>Na czym polega gra?</h2>
-        <p>
-            W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.
-            <br><br>
-            Następnie gracze są dobierani w pary tak, aby było jak najwięcej punktów wśród wszystkich graczy.
-            Punkty są przyznawane za takie same odpowiedzi na pytania.
+    <div class="box high-line">
+        <span class="qa">Na czym polega gra?</span>
+        <p>W każdej rundzie wszyscy gracze odpowiadają na 10 takich samych pytań.
+            Następnie gracze są dobierani w pary tak, aby uzyskać jak najwięcej punktów <strong>dla całej grupy graczy</strong>.
             Dobraną parę nazywamy <strong>optyjaciółmi</strong>.
-            <br><br>
-            Każda runda trwa jeden tydzień.
-            W trakcie trwania rundy optyjaciele mogą się zmieniać, ponieważ do gry dołączają nowi gracze.
-            Na koniec rundy, gra jest zakańczana a optyjaciele są ustanawianie na stałe.
         </p>
 
-        <h2>Jak dobierani są optyjaciele?</h2>
-        <p>
-            <img src="{% static 'img/diagram.png' %}" alt="Przykładowe wyniki z rundy">
-            Optyjaciele są łączeni w pary tak, aby było jak najwięcej punktów wśród wszystkich grających.
-            Punkt jest przyznawany zawsze wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.
-            <br><br>
-            Załóżmy, że w grze biorą udział Alicja, Bartek, Czarek i Daria.
-            Ich wyniki można zobaczyć na diagramie.
-            <br><br>
-            Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) i Czarek z Darią (wynik 6 punktów).
-            W ten sposób wynik całej grupy to 13 punktów.
-            <br><br>
-            Mimo że najwyższy wynik mają Alicja i Czarek (8 punktów) nie są oni optyjacielami,
-            ponieważ wtedy Bartek zostałby połączony z Darią (4 punkty).
-            Wynik całej grupy wyniósłby tylko 12 punktów.
+        <p>Punkt przyznawany jest wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.
+            Każda runda zawiera 10 pytań, więc jedna para może uzyskać maksymalnie 10 punktów.
+        </p>
+
+        <span class="blue-reverse">Ważne!</span> Twoim optyjacielem nie jest osoba, z którą masz najwięcej punktów.
+        Jest to osoba, z którą jesteś połączony(a) tak, aby cała grupa miała jak najwięcej punktów.
+        Więcej na ten temat w odpowiedzi na kolejne pytanie.
+
+        <p>Każda runda trwa jeden tydzień (od poniedziałku do niedzieli).
+            W trakcie trwania rundy optyjaciele mogą się zmieniać, ponieważ do gry dołączają nowi gracze.
+            Po zakończeniu rundy nowi uczestnicy nie moga już dołączyć, a optyjaciele są łączeni na stałe.
         </p>
     </div>
+
+    <div class="box high-line">
+        <span class="qa">Jak dobierani są optyjaciele?</span>
+        <img src="{% static 'img/diagram.png' %}" alt="Przykładowe wyniki z rundy">
+        <p>Optyjaciele są łączeni w pary tak, aby uzyskać jak najwięcej punktów wśród wszystkich grających.
+            Punkt jest przyznawany zawsze wtedy, gdy dwie osoby odpowiedzą tak samo na pytanie.</p>
+
+        <p>Zobaczmy to na przykładzie.</p>
+
+        <p>Załóżmy, że w grze biorą udział Alicja, Bartek, Czarek i Daria.
+            Ich wyniki można zobaczyć na diagramie obok.</p>
+
+        <p>Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) i Czarek z Darią (wynik 6 punktów).
+            W ten sposób wynik całej grupy to 13 punktów.</p>
+
+        <p>Mimo że najwyższy wynik mają Alicja i Czarek (8 punktów) nie są oni optyjacielami,
+            ponieważ wtedy Bartek zostałby połączony z Darią (4 punkty).
+            Wynik całej grupy wyniósłby tylko 12 punktów.</p>
+    </div>
+
+    <div class="box high-line">
+        <span class="qa">Jakie jest prawdopodobieństwo uzyskania 10 punktów?</span>
+        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1/4.</p>
+
+        <p>W przypadku dwóch pytań, prawdopobieństwo maleje do 1/16.</p>
+
+        <p>Prawdopodobieństwo, że odpowiedzieliśmy tak samo na wszystkie 10 pytań wynosi 1 na 1 048 576
+            (prawie jeden na milion!).</p>
+
+        <p>Masz więcej pytań? Zadaj je za pomocą formularza kontaktowego.</p>
+    </div>
+
 {% endblock %}
