--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -1,5 +1,6 @@
 /*
-    orange: rgba(245, 180, 76, 1)
+    orange: rgba(245, 180, 76, 1);
+    blue: #003c61;
 */
 
 * { box-sizing: border-box; }
@@ -9,6 +10,7 @@ body {
     font-family: Ubuntu, sans-serif;
     margin: 0;
     background-color: #eee;
+    overflow-y : scroll;
 }
 
 .top-bar {
@@ -70,11 +72,7 @@ body {
 
 .content {
     flex-grow: 2;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
     border-top: 2px solid rgba(245, 180,76, 1);
-    padding: 24px;
 }
 
 .footer {
@@ -93,4 +91,68 @@ body {
     .logo {
         display: none;
     }
+}
+
+.box {
+    background-color: #fff;
+    padding: 16px;
+    margin-bottom: 24px;
+    overflow: hidden;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.big-orange-button {
+    background-color: rgba(245, 180, 76, 0.9);
+    border: none;
+    color: white;
+    padding: 12px 24px;
+    text-align: center;
+    margin-top: 16px;
+    border-radius: 2px;
+    cursor: pointer;
+    width: 33%;
+    font-size: 14px;
+}
+
+.small-blue-button {
+    padding: 12px;
+    /*border: 1px solid #003c61;*/
+    margin-top: 24px;
+    display: inline-block;
+    width: auto;
+    border-radius: 24px;
+    background-color: rgba(0, 60, 97, 0.7);
+    color: #fff;
+}
+
+.small-blue-button:hover {
+    background-color: rgba(0, 60, 97, 1);
+}
+
+.vertical-center {
+    display: flex;
+    justify-content: center;
+}
+
+.big-orange-button:hover {
+    background-color: rgba(245, 180, 76, 1);
+}
+
+table {
+    margin: 0 auto;
+}
+
+.blue {
+    color: #003c61;
+    font-weight: bold;
+}
+
+.blue-reverse {
+    color: #fff;
+    background-color: #003c61;
+    font-weight: bold;
+}
+
+.orange {
+    color: rgba(245, 180, 76, 1);
 }
