--- a/game/templates/match.html
+++ b/game/templates/match.html
@@ -1,20 +1,26 @@
-Rok: {{ match.quiz.year }}, tydzień {{ match.quiz.week }}
 {% if match.matched_user %}
-    <div class="user-card">
-        <div class="left">
-            <span class="score">{{ match.score }}</span><br>{{ match.points }}
+    <div class="card">
+
+        <div class="top">
+            {{ match.quiz.year }}_{{ match.quiz.week }}
         </div>
 
-        <div class="right">
-            <span class="username">{{ match.matched_user.username }}</span>
-            <div class="buttons">
-                <a href="{% url "compatibility" match.quiz.id user_id match.matched_user.id %}">
-                    kompatybilność
-                </a>
-                {# <button>wiadomość</button> #}
+        <div class="middle">
+
+            <span style="font-size: 2em;"><strong>{{ match.matched_user.username }}</strong></span>
+        </div>
+
+        <div class="down">
+            <div>
+                <span style="font-size: 1.4em;"><strong>{{ match.score }}</strong></span><br>
+                <span style="font-size: 1em; color: #333; text-transform: uppercase;">{{ match.points }}</span>
             </div>
+            <a href="{% url "compatibility" match.quiz.id user_id match.matched_user.id %}" class="small-blue-button">
+                kompatybilność
+            </a>
         </div>
     </div>
+
 {% else %}
     <p><strong>Niestety obecnie jest nieparzysta liczba uczestników i nie masz optyjaciela. :-(</strong></p>
 {% endif %}
