--- a/game/templates/suggest.html
+++ b/game/templates/suggest.html
@@ -1,26 +1,36 @@
 {%  extends "base.html" %}
 
+{% load static %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/suggest.css' %}">
+{% endblock %}
+
 {%  block content %}
-    Zaproponuj swoje pytanie do kolejnych rund gry:
+    <div class="box">
+        <div style="text-align: center;">Zaproponuj swoje pytanie do kolejnych rund gry:</div>
 
-    {% if form.login.errors %}
-      <ol>
-      {% for err in form.login.errors %}
-        <li>
-          <strong>
-            {{ err|escape }}
-          </strong>
-        </li>
-      {% endfor %}
-      </ol>
-    {% endif %}
+        {% if form.login.errors %}
+          <ol>
+          {% for err in form.login.errors %}
+            <li>
+              <strong>
+                {{ err|escape }}
+              </strong>
+            </li>
+          {% endfor %}
+          </ol>
+        {% endif %}
 
-    <form action="#" method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-        </table>
-        <button type="submit">Wyślij</button>
-    </form>
-
+        <div class="suggest-form">
+            <form action="#" method="post">
+                {% csrf_token %}
+    {#            <table>#}
+                    {{ form.as_p }}
+    {#            </table>#}
+                <div class="vertical-center">
+                    <button type="submit" class="big-orange-button">Wyślij</button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
