--- a/game/templates/game_match.html
+++ b/game/templates/game_match.html
@@ -12,10 +12,10 @@
         Do końca rundy zostało: <strong>{{ remaining_time_in_week }}</strong>.
         Obecnie Twoim optyjacielem jest:
     </div>
-    <br><br>
-
-    {% include "match.html" %}
-
+    <br>
+    <div class="vertical-center">
+        {% include "match.html" %}
+    </div>
     <div class="bottom"></div>
 
 {% endblock %}
