--- a/game/templates/rules.html
+++ b/game/templates/rules.html
@@ -19,7 +19,7 @@
 
         <span class="blue-reverse">Ważne!</span> Twoim optyjacielem nie jest osoba, z którą masz najwięcej punktów.
         Jest to osoba, z którą jesteś połączony(a) tak, aby cała grupa miała jak najwięcej punktów.
-        Więcej na ten temat w odpowiedzi na kolejne pytanie.
+        Więcej na temat sposobu łączenia w pary znajdziesz w odpowiedzi w kolejnym pytaniu.
 
         <p>Każda runda trwa jeden tydzień (od poniedziałku do niedzieli).
             W trakcie trwania rundy optyjaciele mogą się zmieniać, ponieważ do gry dołączają nowi gracze.
@@ -38,24 +38,24 @@
         <p>Załóżmy, że w grze biorą udział Alicja, Bartek, Czarek i Daria.
             Ich wyniki można zobaczyć na diagramie obok.</p>
 
-        <p>Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) i Czarek z Darią (wynik 6 punktów).
+        <p>Optyjacielami zostaliby Alicja i Bartek (wynik 7 punktów) oraz Czarek i Daria (wynik 6 punktów).
             W ten sposób wynik całej grupy to 13 punktów.</p>
 
         <p>Mimo że najwyższy wynik mają Alicja i Czarek (8 punktów) nie są oni optyjacielami,
             ponieważ wtedy Bartek zostałby połączony z Darią (4 punkty).
-            Wynik całej grupy wyniósłby tylko 12 punktów.</p>
+            A wynik całej grupy wyniósłby tylko 12 punktów.</p>
     </div>
 
     <div class="box high-line">
         <span class="qa">Jakie jest prawdopodobieństwo uzyskania 10 punktów?</span>
-        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1/4.</p>
+        <p>Prawdopodobieństwo odpowiedzi tak samo na jedno pytanie to 1 do 4.</p>
 
-        <p>W przypadku dwóch pytań, prawdopobieństwo maleje do 1/16.</p>
+        <p>W przypadku dwóch pytań, prawdopobieństwo odpowiedzi na obydwa tak samo wynosi 1 do 16.</p>
 
-        <p>Prawdopodobieństwo, że odpowiedzieliśmy tak samo na wszystkie 10 pytań wynosi 1 na 1 048 576
-            (prawie jeden na milion!).</p>
+        <p>Natomiast prawdopodobieństwo, że dwie osoby odpowiedziały tak samo na wszystkie 10 pytań wynosi 1 do 1 048 576
+            (mniej niż jeden na milion!).</p>
 
-        <p>Masz więcej pytań? Zadaj je za pomocą formularza kontaktowego.</p>
+        <p>Masz więcej pytań? Zadaj je proszę za pomocą formularza kontaktowego.</p>
     </div>
 
 {% endblock %}
