--- a/game/static/css/match.css
+++ b/game/static/css/match.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    margin: 0 auto;
     text-align: center;
 }
 
@@ -35,4 +34,13 @@
     background-color: #fff;
     border-radius: 0 0 25px 25px;
     box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
+}
+
+.previous_matches {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 20px;
+    padding: 24px;
 }
