--- a/game/templates/game_quiz.html
+++ b/game/templates/game_quiz.html
@@ -7,41 +7,42 @@
 {% endblock %}
 
 {%  block content %}
-    <form method="post">
-    {% csrf_token %}
-        {% for quizitem in quizitems %}
-        <div class="question-set">
-            <div class="question-container" id="{{ quizitem.id }}" data-counter="{{ forloop.counter }}">
-                <div class="question-number">[{{ forloop.counter }}/10]</div>
-                <div class="question">{{ quizitem.question_set.question }}</div>
+    <div class="box">
+        <form method="post">
+        {% csrf_token %}
+            {% for quizitem in quizitems %}
+            <div class="question-set">
+                <div class="question-container" id="{{ quizitem.id }}" data-counter="{{ forloop.counter }}">
+                    <div class="question-number">[{{ forloop.counter }}/10]</div>
+                    <div class="question">{{ quizitem.question_set.question }}</div>
+                </div>
+                <div class="options-container">
+                    <label class="lbl">
+                        <input type="radio" name="{{ quizitem.id }}" value="1" required>
+                        <div>{{ quizitem.question_set.option1 }}</div>
+                    </label>
+
+                    <label class="lbl">
+                        <input type="radio" name="{{ quizitem.id }}" value="2">
+                        <div>{{ quizitem.question_set.option2 }}</div>
+                    </label>
+
+                    <label class="lbl">
+                        <input type="radio" name="{{ quizitem.id }}" value="3">
+                        <div>{{ quizitem.question_set.option3 }}</div>
+                    </label>
+
+                    <label class="lbl">
+                        <input type="radio" name="{{ quizitem.id }}" value="4">
+                        <div>{{ quizitem.question_set.option4 }}</div>
+                    </label>
+                </div>
             </div>
-            <div class="options-container">
-                <label class="lbl">
-                    <input type="radio" name="{{ quizitem.id }}" value="1" required>
-                    <div>{{ quizitem.question_set.option1 }}</div>
-                </label>
-
-                <label class="lbl">
-                    <input type="radio" name="{{ quizitem.id }}" value="2">
-                    <div>{{ quizitem.question_set.option2 }}</div>
-                </label>
-
-                <label class="lbl">
-                    <input type="radio" name="{{ quizitem.id }}" value="3">
-                    <div>{{ quizitem.question_set.option3 }}</div>
-                </label>
-
-                <label class="lbl">
-                    <input type="radio" name="{{ quizitem.id }}" value="4">
-                    <div>{{ quizitem.question_set.option4 }}</div>
-                </label>
+            {%  endfor %}
+            <input type="hidden" name="quiz_id" value="{{ quiz.id }}">
+            <div class="vertical-center">
+                <button type="submit" class="big-orange-button">Wyślij</button>
             </div>
-        </div>
-        {%  endfor %}
-        <input type="hidden" name="quiz_id" value="{{ quiz.id }}">
-        <div class="vertical-center">
-            <button type="submit" class="big-orange-button">Wyślij</button>
-        </div>
-    </form>
-
+        </form>
+    </div>
 {%  endblock %}
