--- a/game/templates/thanks.html
+++ b/game/templates/thanks.html
@@ -1,7 +1,8 @@
 {%  extends "base.html" %}
 
 {%  block content %}
-    <h1>Dziękuję!</h1>
-    <h2>Twoja wiadomość została wysłana.</h2>
-
+    <div class="box">
+        <h1>Dziękuję!</h1>
+        <h2>Twoja wiadomość została wysłana.</h2>
+    </div>
 {% endblock %}
