--- a/game/templates/game_match.html
+++ b/game/templates/game_match.html
@@ -14,7 +14,7 @@
     </div>
     <br>
     <div class="vertical-center">
-        {% include "match.html" %}
+        {% include "single_match.html" %}
     </div>
     <div class="bottom"></div>
 
