--- a/game/templates/suggest.html
+++ b/game/templates/suggest.html
@@ -7,7 +7,7 @@
 
 {%  block content %}
     <div class="box">
-        <div style="text-align: center;">Zaproponuj swoje pytanie do kolejnych rund gry:</div>
+        <div style="text-align: center;">Zaproponuj swoje pytanie do kolejnych rund gry</div>
 
         {% if form.login.errors %}
           <ol>
