--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -13,40 +13,44 @@
     <title>optyjaciel | optymalny przyjaciel</title>
 </head>
 <body>
-    <div class="top-bar">
-        <div class="top-bar-container">
-            {% if request.user.username %}
-                <strong>{{ request.user.username }}</strong> | <a href="{% url "logout" %}">wyloguj się</a>
-            {% else %}
-                <a href="{% url "login" %}">zaloguj się</a>
-            {% endif %}
+    <div class="wrapper">
+        <div class="top-bar">
+            <div class="top-bar-container">
+                {% if request.user.username %}
+                    <strong>{{ request.user.username }}</strong> | <a href="{% url "logout" %}">wyloguj się</a>
+                {% else %}
+                    <a href="{% url "login" %}">zaloguj się</a>
+                {% endif %}
+            </div>
         </div>
+
+        <h1 class="logo">optyjaciel</h1>
+        <div class="container">
+            <div class="menu">
+                <ul>
+                    <li {% if path_name == "rules" %} class="checked" {% endif %}>
+                        <a href="{% url "rules" %}">zasady gry</a>
+                    </li>
+                    <li {% if path_name == "game" %} class="checked" {% endif %}>
+                        <a href="{% url "game" %}">aktualna runda</a>
+                    </li>
+                    <li {% if path_name == "matches" %} class="checked" {% endif %}>
+                        <a href="{% url "matches" %}">Twoi optyjaciele</a>
+                    </li>
+                    <li {% if path_name == "suggest" %} class="checked" {% endif %}>
+                        <a href="{% url "suggest" %}">zaproponuj pytanie</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="content">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+
+        <div class="push"></div>
     </div>
-
-    <h1 class="logo">optyjaciel</h1>
-    <div class="container">
-        <div class="menu">
-            <ul>
-                <li {% if path_name == "rules" %} class="checked" {% endif %}>
-                    <a href="{% url "rules" %}">zasady gry</a>
-                </li>
-                <li {% if path_name == "game" %} class="checked" {% endif %}>
-                    <a href="{% url "game" %}">aktualna runda</a>
-                </li>
-                <li {% if path_name == "matches" %} class="checked" {% endif %}>
-                    <a href="{% url "matches" %}">Twoi optyjaciele</a>
-                </li>
-                <li {% if path_name == "suggest" %} class="checked" {% endif %}>
-                    <a href="{% url "suggest" %}">zaproponuj pytanie</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="content">
-            {% block content %}{% endblock %}
-        </div>
-    </div>
-
     <div class="footer"></div>
+
 </body>
 </html>
