--- a/game/templates/message_write.html
+++ b/game/templates/message_write.html
@@ -6,28 +6,35 @@
 
 {%  block content %}
     <div class="box">
+        {% if no_matches > 0 %}
+            {% if form.login.errors %}
+              <ol>
+              {% for err in form.login.errors %}
+                <li>
+                  <strong>
+                    {{ err|escape }}
+                  </strong>
+                </li>
+              {% endfor %}
+              </ol>
+            {% endif %}
 
-        {% if form.login.errors %}
-          <ol>
-          {% for err in form.login.errors %}
-            <li>
-              <strong>
-                {{ err|escape }}
-              </strong>
-            </li>
-          {% endfor %}
-          </ol>
-        {% endif %}
-
-        <form action="#" method="post">
-            {% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                </table>
-            <div class="vertical-center">
-                <button type="submit" class="big-orange-button">Wyślij</button>
+            <form action="#" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="vertical-center">
+                    <button type="submit" class="big-orange-button">Wyślij</button>
+                </div>
+            </form>
+        {% else %}
+            <div style="text-align: center; width: 100%; margin: 36px;">
+                <span style="font-size: 1.5em;">
+                    Na razie nie masz żadnego optyjaciela.<br>
+                </span>
+                <span style="font-size: 1.2em;">
+                    Wiadomości można wysyłać do optyjaciół. Możesz zdobyć optyjaciela poprzez udział w grze.
+                </span>
             </div>
-        </form>
-
+        {%  endif %}
     </div>
 {% endblock %}
