--- a/game/static/css/match.css
+++ b/game/static/css/match.css
@@ -30,6 +30,7 @@
 
 .down {
     padding-top: 16px;
+    padding-bottom: 20px;
     flex-basis: 180px;
     background-color: #fff;
     border-radius: 0 0 25px 25px;
@@ -53,4 +54,22 @@
     padding: 10px;
     font-size: smaller;
     color: #333;
+}
+
+.blue-button {
+    padding: 12px;
+    margin: 0 auto 12px auto;
+    display: block;
+    width: 80%;
+    border-radius: 24px;
+    background-color: rgba(0, 60, 97, 0.6);
+    color: #fff;
+}
+
+.blue-button:hover {
+    background-color: rgba(0, 60, 97, 1);
+}
+
+.blue-button:first-child {
+
 }
