--- a/game/templates/message_outbox.html
+++ b/game/templates/message_outbox.html
@@ -7,7 +7,7 @@
 
 {%  block content %}
     <div class="box">
-        <a style="display: block;" href="{% url "message-write" %}">
+        <a style="display: block;" href="{% url "message-write" 0 %}">
             <div style="display: flex; align-items: center; gap: 4px;">
                 <i class="material-icons" style="font-size: 2em; color: green;">add_circle</i> Nowa wiadomość
             </div>
