--- a/game/templates/compatibility.html
+++ b/game/templates/compatibility.html
@@ -7,6 +7,7 @@
 
 {%  block content %}
     <div class="box">
+        <h3>Runda: {{ quiz.year }}_{{ quiz.week }}</h3>
         <table>
             <tr>
                 <th>#</th>
