--- a/game/static/css/base.css
+++ b/game/static/css/base.css
@@ -56,7 +56,7 @@ body {
 .container {
     min-height: 100%;
     width: 90%;
-    margin: 0 auto;
+    margin: 0 auto 24px auto;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
