update title per page

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block head %}{% endblock %}
-    <title>optyjaciel | optymalny przyjaciel</title>
+    <title>optyjaciel | {% block subtitle %}optymalny przyjaciel{% endblock %}</title>
 </head>
 <body>
     <div class="wrapper">
