--- a/game/templates/compatibility.html
+++ b/game/templates/compatibility.html
@@ -4,6 +4,7 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/compatibility.css' %}">
 {% endblock %}
+{% block subtitle %}kompatybilność{% endblock %}
 
 {%  block content %}
     <div class="box">
