--- a/game/templates/game_match.html
+++ b/game/templates/game_match.html
@@ -4,8 +4,7 @@
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/match.css' %}">
 {% endblock %}
-
-{% block content-title %}aktualna runda{% endblock %}
+{% block subtitle %}aktualna runda | wynik{% endblock %}
 
 {%  block content %}
     <div class="information">
