--- a/game/templates/game_quiz.html
+++ b/game/templates/game_quiz.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/game_quiz.css' %}">
     <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
 {% endblock %}
+{% block subtitle %}aktualna runda | gra{% endblock %}
 
 {%  block content %}
     <div class="box">
