--- a/game/templates/join.html
+++ b/game/templates/join.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Cookie" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu" rel="stylesheet">
-    <title>optyjaciel | optymalny przyjaciel</title>
+    <title>optyjaciel | {% block subtitle %}optymalny przyjaciel{% endblock %}</title>
 </head>
 <body>
     <div class="container">
