--- a/game/templates/message_read.html
+++ b/game/templates/message_read.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="{% static 'css/message.css' %}">
 {% endblock %}
 
+{% block subtitle %}czytaj wiadomość{% endblock %}
+
 {%  block content %}
     <div class="box">
         <div class="msg-container">
