--- a/game/templates/message_write.html
+++ b/game/templates/message_write.html
@@ -4,6 +4,8 @@
 {% block head %}
 {% endblock %}
 
+{% block subtitle %}napisz wiadomość{% endblock %}
+
 {%  block content %}
     <div class="box">
         {% if no_matches > 0 %}
