--- a/game/templates/previous_matches.html
+++ b/game/templates/previous_matches.html
@@ -1,5 +1,7 @@
 {%  extends "base.html" %}
 
+{% block subtitle %}twoi optyjaciele{% endblock %}
+
 {% load static %}
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/match.css' %}">
