--- a/game/templates/suggest.html
+++ b/game/templates/suggest.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="{% static 'css/suggest.css' %}">
 {% endblock %}
 
+{% block subtitle %}zaproponuj pytanie{% endblock %}
+
 {%  block content %}
     <div class="box">
         <div style="text-align: center;">Zaproponuj swoje pytanie do kolejnych rund gry</div>
