--- a/game/templates/thanks.html
+++ b/game/templates/thanks.html
@@ -1,5 +1,7 @@
 {%  extends "base.html" %}
 
+{% block subtitle %}dziękuję{% endblock %}
+
 {%  block content %}
     <div class="box">
         <h1>Dziękuję!</h1>
