--- a/game/templates/message_outbox.html
+++ b/game/templates/message_outbox.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="{% static 'css/message.css' %}">
 {% endblock %}
 
+{% block subtitle %}wiadomości wysłane{% endblock %}
+
 {%  block content %}
     <div class="box">
         <a style="display: block;" href="{% url "message-write" %}">
