--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Optyjaciel to internetowa gra towarzyska, w której możesz poznać nowych
+    znajomych i przyjaciół. W grze zostaniesz dobrany w parę na podstawie Twoich zainteresowań i preferencji.">
+    <meta name="keywords" content="gra towarzyska, przyjaciele, znajomi, zabawa">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu">
